@@ -89,6 +89,7 @@ fixed formatting. Tomasz Flendrich
 * libntp/icom.c: Typo fix.  Harlan Stenn.
 * util/ntptime.c: initialization nit.  Harlan Stenn.
 * ntpd/ntp_peer.c:newpeer(): added a DEBUG_REQUIRE(srcadr).  Harlan Stenn.
+* Add std_unity_tests to various Makefile.am files.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
